# qwen3-asr

./: .env.example  README.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml
.github/workflows/: docker-build.yml
app/core/: config.py
app/services/asr/: manager.py  mega_asr_engine.py  model_plan.py  model_selection.py  models.json  qwen3_vllm.py
app/services/asr/engines/: __init__.py
app/services/asr/runtime/: router.py
app/utils/: audio.py  model_loader.py
ckpt/Mega-ASR/mega-asr-merged/: adapter_config.json  mega_lora_blocks.json
docs/: README_zh.md  mega_asr_fusion_design.md
tests/: test_mega_asr.py
tools/: download_mega_asr.py
